--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,25 @@
 			<artifactId>sqs</artifactId>
 			<version>2.28.1</version> <!-- You can check for the latest version -->
 		</dependency>
+
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-api</artifactId>
+			<version>0.12.6</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-impl</artifactId>
+			<version>0.12.6</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-jackson</artifactId>
+			<version>0.12.6</version>
+
+		</dependency>
 	</dependencies>
 
 	<build>
