--- a/src/main/resources/application-prd.properties
+++ b/src/main/resources/application-prd.properties
@@ -22,3 +22,6 @@ aws.region=ap-southeast-1
 aws.sqs.url = ${AWS_SQS_URL}
 
 frontend.url=${FRONTEND_URL}
+
+jwt.private.key=${JWT_PRIVATE_KEY}
+jwt.public.key=${JWT_PUBLIC_KEY}
