--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,8 @@ logging.pattern.dateformat=dd-MM-yyyy - HH:mm:ss
 logging.pattern.rolling-file-name=${logging.file.path}/voucher-app-%d{yyy-MM-dd}-%i.log
 logging.file.max-size =200MB
 logging.file.max-history=7
+logging.level.org.springframework.security=DEBUG
+
 
 aes.secret.key={AES_SECRET_KEY}
 aws.ses.from=khinvoucher2@gmail.com
@@ -22,3 +24,10 @@ aws.sqs.url = ${AWS_SQS_URL}
 aws.region=ap-southeast-1
 
 frontend.url=${FRONTEND_URL}
+
+spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
+spring.security.oauth2.client.registration.google.scope=profile,email
+spring.security.oauth2.client.registration.google.redirect-uri=${GOOGLE_REDIRECT_URL}
+spring.security.oauth2.client.registration.google.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.google.client-name=Google
