--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,4 +35,5 @@ spring.security.oauth2.client.registration.google.redirect-uri=${GOOGLE_REDIRECT
 
 spring.redis.host=localhost
 spring.redis.port=6379
+spring.redis.timeout=6000 
 logging.level.org.springframework.data.redis=DEBUG
