--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,9 +29,7 @@ jwt.private.key=${JWT_PRIVATE_KEY}
 jwt.public.key=${JWT_PUBLIC_KEY}
 
 spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
-spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
-spring.security.oauth2.client.registration.google.scope=profile,email
-spring.security.oauth2.client.registration.google.redirect-uri=${GOOGLE_REDIRECT_URL}
+GOOGLE_TOKEN_INFO_URL=https://oauth2.googleapis.com/tokeninfo?id_token=
 
 
 spring.redis.host=${REDIS_HOST}
