Implement 30-minute token expiration for pentest mode.

--- a/src/main/resources/application-prd.properties
+++ b/src/main/resources/application-prd.properties
@@ -25,3 +25,10 @@ frontend.url=${FRONTEND_URL}
 
 jwt.private.key=${JWT_PRIVATE_KEY}
 jwt.public.key=${JWT_PUBLIC_KEY}
+
+spring.redis.host=${REDIS_HOST}
+spring.redis.port=6379
+spring.redis.timeout=5000
+logging.level.org.springframework.data.redis=DEBUG
+
+pentest.enable=PENTEST_ENABLE
