--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,3 +37,5 @@ spring.redis.port=6379
 spring.redis.timeout=5000
 logging.level.org.springframework.data.redis=DEBUG
 
+pentest.enable=PENTEST_ENABLE
+
