Enhance login logic to generate cookie for pentest mode.

--- a/src/main/resources/application-prd.properties
+++ b/src/main/resources/application-prd.properties
@@ -31,4 +31,4 @@ spring.redis.port=6379
 spring.redis.timeout=5000
 logging.level.org.springframework.data.redis=DEBUG
 
-pentest.enable=PENTEST_ENABLE
+pentest.enable=${PENTEST_ENABLE}
