--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -20,3 +20,5 @@ aws.sqs.url = http://sqs.ap-southeast-1.amazonaws.com/12345/testing
 
 jwt.private.key=12345678
 jwt.public.key=654321
+
+pentest.enable=false
