Amend Audit SQS environment variable name.

--- a/src/main/resources/application-prd.properties
+++ b/src/main/resources/application-prd.properties
@@ -19,7 +19,7 @@ aws.ses.from=donotreply.vouchermgmt@gmail.com
 aws.accesskey=${AWS_ACCESS_KEY}
 aws.secretkey=${AWS_SECRET_KEY}
 aws.region=ap-southeast-1
-aws.sqs.url = ${AWS_SQS_URL}
+aws.sqs.queue.audit.url=${AUDIT_SQS_URL}
 
 frontend.url=${FRONTEND_URL}
 
