--- a/src/main/resources/application-sit.properties
+++ b/src/main/resources/application-sit.properties
@@ -21,7 +21,7 @@ aws.secretkey=${AWS_SECRET_KEY}
 aws.region=ap-southeast-1
 
 frontend.url=${FRONTEND_URL}
-aws.sqs.url = ${AWS_SQS_URL}
+aws.sqs.queue.audit.url=${AUDIT_SQS_URL}
 
 jwt.private.key=${JWT_PRIVATE_KEY}
 jwt.public.key=${JWT_PUBLIC_KEY}
