--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -16,7 +16,8 @@ aws.ses.from=donotreply.vouchermgmt@gmail.com
 frontend.url=http://localhost:3000
 aws.accesskey=AAAAAAAAAAA
 aws.secretkey=1Core
-aws.sqs.url = http://sqs.ap-southeast-1.amazonaws.com/12345/testing
+aws.sqs.queue.audit.url = http://sqs.ap-southeast-1.amazonaws.com/12345/testing
+
 
 jwt.private.key=12345678
 jwt.public.key=654321
