--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,7 @@ aes.secret.key={AES_SECRET_KEY}
 aws.ses.from=khinvoucher2@gmail.com
 aws.accesskey=${AWS_ACCESS_KEY}
 aws.secretkey=${AWS_SECRET_KEY}
-aws.sqs.url = ${AWS_SQS_URL}
+aws.sqs.queue.audit.url=${AUDIT_SQS_URL}
 aws.region=ap-southeast-1
 
 frontend.url=${FRONTEND_URL}
