--- a/src/main/resources/application-sit.properties
+++ b/src/main/resources/application-sit.properties
@@ -28,6 +28,7 @@ jwt.public.key=${JWT_PUBLIC_KEY}
 
 spring.redis.host=${REDIS_HOST}
 spring.redis.port=6379
+spring.redis.ssl=true
 spring.redis.timeout=5000
 logging.level.org.springframework.data.redis=DEBUG
 
