--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,6 +34,7 @@ GOOGLE_TOKEN_INFO_URL=https://oauth2.googleapis.com/tokeninfo?id_token=
 
 spring.redis.host=${REDIS_HOST}
 spring.redis.port=6379
+spring.redis.ssl=true
 spring.redis.timeout=5000
 logging.level.org.springframework.data.redis=DEBUG
 
