--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -23,3 +23,7 @@ jwt.private.key=12345678
 jwt.public.key=654321
 
 pentest.enable=false
+
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.ssl=true
