--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,10 +32,10 @@ spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
 GOOGLE_TOKEN_INFO_URL=https://oauth2.googleapis.com/tokeninfo?id_token=
 
 
-spring.redis.host=${REDIS_HOST}
-spring.redis.port=6379
-spring.redis.ssl=true
-spring.redis.timeout=5000
+spring.data.redis.host=${REDIS_HOST}
+spring.data.redis.port=6379
+spring.data.redis.ssl.enabled=true
+spring.data.redis.timeout=5000
 logging.level.org.springframework.data.redis=DEBUG
 
 pentest.enable=${PENTEST_ENABLE}
