--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -24,6 +24,8 @@ jwt.public.key=654321
 
 pentest.enable=false
 
-spring.redis.host=localhost
-spring.redis.port=6379
-spring.redis.ssl=true
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.data.redis.ssl.enabled=false
+spring.data.redis.timeout=5000
+logging.level.org.springframework.data.redis=DEBUG
