--- a/src/main/resources/application-prd.properties
+++ b/src/main/resources/application-prd.properties
@@ -26,6 +26,9 @@ frontend.url=${FRONTEND_URL}
 jwt.private.key=${JWT_PRIVATE_KEY}
 jwt.public.key=${JWT_PUBLIC_KEY}
 
+spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
+google.token.info.url=https://oauth2.googleapis.com/tokeninfo?id_token=
+
 spring.data.redis.host=${REDIS_HOST}
 spring.data.redis.port=6379
 spring.data.redis.ssl.enabled=true
