--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ logging.level.org.springframework.security=DEBUG
 
 
 aes.secret.key={AES_SECRET_KEY}
-aws.ses.from=khinvoucher2@gmail.com
+aws.ses.from=donotreply.vouchermgmt@gmail.com
 aws.accesskey=${AWS_ACCESS_KEY}
 aws.secretkey=${AWS_SECRET_KEY}
 aws.sqs.queue.audit.url=${AUDIT_SQS_URL}
@@ -29,7 +29,7 @@ jwt.private.key=${JWT_PRIVATE_KEY}
 jwt.public.key=${JWT_PUBLIC_KEY}
 
 spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
-GOOGLE_TOKEN_INFO_URL=https://oauth2.googleapis.com/tokeninfo?id_token=
+google.token.info.url=https://oauth2.googleapis.com/tokeninfo?id_token=
 
 
 spring.data.redis.host=${REDIS_HOST}
