--- a/src/main/resources/application-sit.properties
+++ b/src/main/resources/application-sit.properties
@@ -36,3 +36,4 @@ spring.data.redis.timeout=5000
 logging.level.org.springframework.data.redis=DEBUG
 
 pentest.enable=${PENTEST_ENABLE}
+secure.flag.enable=${SECURE_ENABLE}
