--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -29,3 +29,4 @@ spring.data.redis.port=6379
 spring.data.redis.ssl.enabled=false
 spring.data.redis.timeout=5000
 logging.level.org.springframework.data.redis=DEBUG
+secure.flag.enable=true
