Added secure flag environment variable

--- a/deployment.yaml
+++ b/deployment.yaml
@@ -79,6 +79,11 @@ spec:
                 configMapKeyRef:
                   name: my-configmap
                   key: PENTEST_ENABLE
+            - name: SECURE_ENABLE
+              valueFrom:
+                configMapKeyRef:
+                  name: my-configmap
+                  key: SECURE_ENABLE
             - name: REDIS_HOST
               valueFrom:
                 configMapKeyRef:
