enable redis ssl

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,7 +34,7 @@ google.token.info.url=https://oauth2.googleapis.com/tokeninfo?id_token=
 
 spring.data.redis.host=${REDIS_HOST}
 spring.data.redis.port=6379
-spring.data.redis.ssl.enabled=false
+spring.data.redis.ssl.enabled=true
 spring.data.redis.timeout=5000
 logging.level.org.springframework.data.redis=DEBUG
 
