added demo flag

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -30,3 +30,4 @@ spring.data.redis.ssl.enabled=false
 spring.data.redis.timeout=5000
 logging.level.org.springframework.data.redis=DEBUG
 secure.flag.enable=true
+demo.flag.enable = false
