revert ses email value and ssl enable value

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ logging.level.org.springframework.security=DEBUG
 
 
 aes.secret.key={AES_SECRET_KEY}
-aws.ses.from=khinvoucher2@gmail.com
+aws.ses.from=donotreply.vouchermgmt@gmail.com
 aws.accesskey=${AWS_ACCESS_KEY}
 aws.secretkey=${AWS_SECRET_KEY}
 aws.sqs.queue.audit.url=${AUDIT_SQS_URL}
@@ -34,7 +34,7 @@ google.token.info.url=https://oauth2.googleapis.com/tokeninfo?id_token=
 
 spring.data.redis.host=${REDIS_HOST}
 spring.data.redis.port=6379
-spring.data.redis.ssl.enabled=false
+spring.data.redis.ssl.enabled=true
 spring.data.redis.timeout=5000
 logging.level.org.springframework.data.redis=DEBUG
 
