--- a/src/main/resources/application-prd.properties
+++ b/src/main/resources/application-prd.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://voucher-app-auth.cdegiiea4gqv.ap-southeast-1.rds.amazonaws.com/auth
+spring.datasource.url=jdbc:mysql://voucher-management-prd.cdegiiea4gqv.ap-southeast-1.rds.amazonaws.com/auth
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
