--- a/src/main/resources/application-sit.properties
+++ b/src/main/resources/application-sit.properties
@@ -27,7 +27,7 @@ jwt.private.key=${JWT_PRIVATE_KEY}
 jwt.public.key=${JWT_PUBLIC_KEY}
 
 spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
-google.token.info.url=https://oauth2.googleapis.com/tokeninfo?id_token=
+google.token.info.url=https://oauth2.googleapis.com/tokeninfo
 
 spring.data.redis.host=${REDIS_HOST}
 spring.data.redis.port=6379
