--- a/pom.xml
+++ b/pom.xml
@@ -147,6 +147,12 @@
 			<artifactId>json-smart</artifactId>
 			<version>2.5.2</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			</dependency>
+
 
 	</dependencies>
 
